# webmux

./: .dockerignore  .env.example  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.desktop  README.md  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/projects/-home-chareice-projects-webmux/memory/: project_webmux.md
.github/workflows/: build.yml  ci.yml  container.yml  desktop.yml  mobile-release.yml
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
client/src/components/: Canvas.tsx  CommandBar.tsx  ExtendedKeyBar.tsx  ModeIndicator.tsx  Sidebar.tsx  TerminalCard.tsx  TerminalModal.tsx  TerminalToolbar.tsx
crates/hub/: Cargo.toml
crates/hub/src/: attach_router.rs  auth.rs  machine_manager.rs  main.rs  ws.rs
crates/hub/src/db/: bookmarks.rs  hub_state.rs  machines.rs  mod.rs  settings.rs  terminal_sessions.rs  tokens.rs  types.rs  users.rs
crates/hub/src/routes/: api_tokens.rs  auth.rs  bookmarks.rs  bootstrap.rs  mod.rs  mode.rs  native_zellij.rs  registration.rs  settings.rs  terminals.rs
crates/machine/: Cargo.toml
crates/machine/src/: attach.rs  config.rs  hub_conn.rs  main.rs  pty.rs  service.rs  session_watcher.rs  stats.rs  zellij.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/deployment/: runbook.md
docs/plans/: 2026-03-15-cs-architecture-design.md  2026-03-15-cs-implementation-plan.md  2026-03-15-run-manager-design.md  2026-03-22-unified-expo-app.md  2026-03-25-topdown-office-implementation.md  2026-03-25-topdown-office-redesign.md  2026-03-29-mobile-navigation-refactor.md  2026-04-10-mode-system-mobile.md  2026-04-11-tmux-scroll-clipboard.md  2026-04-12-machine-resource-monitoring.md  2026-04-12-performance-ux-optimization.md  2026-04-12-sync-plane-implementation.md  2026-04-12-terminal-view-model-simplification.md
docs/superpowers/plans/: 2026-04-14-desktop-app.md  2026-04-17-main-ui-redesign.md  2026-04-17-nav-redesign-with-tabs.md  2026-04-17-tmux-multi-attach.md
docs/superpowers/specs/: 2026-04-14-desktop-app-design.md  2026-04-17-main-ui-redesign-design.md  2026-04-17-mobile-input-cleanup-design.md  2026-04-17-nav-redesign-with-tabs-design.md  2026-04-17-terminal-resume-protocol-design.md  2026-04-17-tmux-multi-attach-redesign.md  2026-04-23-zellij-native-design.md
e2e/: .gitignore  Dockerfile.hub  Dockerfile.hub.dockerignore  Dockerfile.node  Dockerfile.node.dockerignore  Dockerfile.runner  Dockerfile.runner.dockerignore  docker-compose.yml  env-playbook.md  prepare-zellij-certs.sh  run-in-docker.sh
e2e/certs/: zellij-node.crt  zellij-node.key
e2e/specs/: core-control-flow.md  grid-navigation.md  mobile-controls.md  multi-device-collaboration.md  tab-navigation.md  terminal-handoff-sizing.md
e2e/tests/: add-machine-entrypoint.spec.ts  core-control-flow.spec.ts  grid-navigation.spec.ts  helpers.ts  mobile-controls.spec.ts  multi-device-collaboration.spec.ts  native-zellij.spec.ts  panel-toggle.spec.ts  quick-commands.spec.ts  tab-navigation.spec.ts  tab-strip.spec.ts  terminal-attach-recovery.spec.ts  terminal-handoff-sizing.spec.ts  terminal-multi-attach.spec.ts  terminal-preview-mux.spec.ts  terminal-resume.spec.ts  terminal-tab-switch.spec.ts
rust/: Cargo.toml
rust/crates/webmux-agent/: Cargo.toml
rust/crates/webmux-agent/src/: connection.rs  credentials.rs  main.rs  repositories.rs  run_wrapper.rs  service.rs  session_store.rs  updater.rs
rust/crates/webmux-agent/src/claude/: client.rs  event.rs
rust/crates/webmux-agent/src/codex/: client.rs  event.rs  input.rs  mod.rs
rust/crates/webmux-cli/: Cargo.toml
rust/crates/webmux-cli/src/: client.rs  config.rs  main.rs  output.rs  stream.rs
rust/crates/webmux-cli/src/commands/: agents.rs  login.rs  mod.rs  nodes.rs  run.rs  status.rs  threads.rs  token.rs
rust/crates/webmux-server/: Cargo.toml
rust/crates/webmux-server/src/: agent_upgrade.rs  auth.rs  error.rs  main.rs  mobile_version.rs  notification.rs  qr_hub.rs  state.rs
rust/crates/webmux-server/src/db/: agents.rs  api_tokens.rs  llm_configs.rs  mod.rs  notifications.rs  projects.rs  qr_login_sessions.rs  runs.rs  tasks.rs  types.rs  users.rs
rust/crates/webmux-server/src/routes/: actions.rs  agents.rs  api_tokens.rs  auth.rs  llm_configs.rs  mobile.rs  mod.rs  projects.rs  qr_login.rs  tasks.rs  threads.rs
rust/crates/webmux-server/src/ws/: agent_hub.rs  handlers.rs  mod.rs  qr.rs  task_dispatcher.rs
rust/crates/webmux-shared/: Cargo.toml
rust/crates/webmux-shared/src/: contracts.rs
scripts/: e2e.sh  install.sh  install.test.mjs  verify-container-runtime.sh
server/: index.ts  terminal.ts  tmux.test.ts  tmux.ts
shared/: contracts.ts
src/: App.css  App.tsx  index.css  main.rs
src/api/: mod.rs
src/components/: CommandPalette.tsx  SessionSidebar.tsx  TerminalPanel.tsx
src/pty/: mod.rs
src/ws/: mod.rs
