[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
portable-pty = "0.9"
vt100 = "0.15"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.27"
jsonwebtoken = "9"
bcrypt = "0.16"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
thiserror = "2"
chrono = "0.4"
http = "1"
