[package]
name = "tc-hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webmux-server"
path = "src/main.rs"

[dependencies]
tc-protocol = { path = "../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
portable-pty = { workspace = true }
vt100 = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
chrono.workspace = true
http.workspace = true
bytes.workspace = true
base64 = "0.22"
url = "2"
