[package]
name = "webmux-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "webmux-agent"
path = "src/main.rs"

[dependencies]
webmux-shared = { path = "../webmux-shared" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
base64 = "0.22"
tempfile = "3"
hostname = "0.4"
libc = "0.2"
rusqlite = { version = "0.34", features = ["bundled"] }
