[package]
name = "webmux-server"
version = "0.1.0"
edition = "2024"

[dependencies]
webmux-shared = { path = "../webmux-shared" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
axum-extra = { version = "0.10", features = ["typed-header"] }
bcrypt = "0.17"
chrono = "0.4"
futures-util = "0.3"
hex = "0.4"
http = "1"
jsonwebtoken = "9"
r2d2 = "0.8"
r2d2_sqlite = "0.27"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
